@@ -30,7 +30,7 @@ repositories {
 
 dependencies {
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.3.4.106-dev"
-    compile "com.gregoriust.gregtech:gregtech_1.7.10:5.04.03:dev"
+    compile "com.gregoriust.gregtech:gregtech_1.7.10:5.05.02:dev"
 }
 
 minecraft {
