@@ -44,11 +44,11 @@ chat.computronics.sensor.wrongDim=Relais und Lokomotive sind in unterschiedliche
 achievement.computronics.gotTape=Musik für alle
 achievement.computronics.gotTape.desc=Mit Sicherheit besser als Klebeband
 achievement.computronics.gotStarTape=Over the Rainbow
-achievement.computronics.gotStarTape.desc=Where Nyan Cat lives
+achievement.computronics.gotStarTape.desc=Du kannst auch gute Musik spielen
 achievement.computronics.gotIGTape=Erster Teil deines Raumschiffs
 achievement.computronics.gotIGTape.desc=Nicht, dass du eins bauen könntest
 achievement.computronics.droppedIGTape=MH370
-achievement.computronics.droppedIGTape.desc=Du kannst ihn nicht mehr finden
+achievement.computronics.droppedIGTape.desc=Einfach verschwunden!?
 achievement.computronics.gotLoco=Elektrische Revolution
 achievement.computronics.gotLoco.desc=So beginnt es.
 achievement.computronics.gotRelay=Digitale Revolution
