@@ -48,7 +48,7 @@ achievement.computronics.gotStarTape.desc=Where Nyan Cat lives
 achievement.computronics.gotIGTape=First part of your spaceship
 achievement.computronics.gotIGTape.desc=Not that you can build one
 achievement.computronics.droppedIGTape=MH370
-achievement.computronics.droppedIGTape.desc=You cannot find it anymore
+achievement.computronics.droppedIGTape.desc=It vanished!?
 achievement.computronics.gotLoco=Electrical Revolution
 achievement.computronics.gotLoco.desc=And so it begins.
 achievement.computronics.gotRelay=Digital Revolution
