@@ -1,5 +1,6 @@
 ==== 1.0.0 (Indev) ====
 
+    Yes, this is what you should think it is, this is the version 1.0.0, so the first actual full release. Prepare for a lot of new stuff:
   * ADDED: RailCraft integration, courtesy of Vexatos! Routing can now be fully controlled with computers!
             - Routing Tracks can now be accessed using the Adapter Block
             - Routing Detectors can now be accessed using the Adapter Block
@@ -10,8 +11,9 @@
   * ADDED: GregTech integration
             - Machine monitoring
             - Digital Chests support
+            - Battery Buffer support (make sure to place the adapter after you placed the battery buffer!)
             - Added a new virtually indestructable high-end tape using GregTech materials!
-            - Added a GregTech recipe mode for all the Computronics blocks and items
+            - Added a GregTech recipe mode for all the Computronics blocks and items (Thanks to SpwnX for helping with this)
   * ADDED: New French (AegisLesha) and Chinese (crafteverywhere) translations.
   * ADDED: ITapeStorage API - developers can now create their own compatible tapes and tape devices.
   * ADDED: tape.lua to tape drives - a utility program to write songs to tapes (from a hard drive or the Internet) and to play, stop, pause etc. songs
